--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://Kiruba2602.github.io/React-project/",
-  "name": "to-do-list",
+  "name": "Mahathi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
